Properly fix the horizontal scroll

--- a/server/assets/marketing/marketing.css
+++ b/server/assets/marketing/marketing.css
@@ -22,10 +22,6 @@
   color-scheme: light;
 }
 
-html {
-  overflow-x: hidden;
-}
-
 body {
   display: flex;
   flex-direction: column;
